src/a12/net/directory.h

struct anet_dirsrv_opts {
	struct a12_context_options* a12_cfg;
	volatile bool flag_rescan;
	int basedir;
	struct appl_meta dir;
	size_t dir_count;

	bool allow_tunnel;
	bool discover_beacon;
	bool runner_process;

	char* allow_src;
	char* allow_dir;
	char* allow_appl;
	char* allow_ctrl;
	char* allow_ares;
	char* allow_admin;
	char* allow_monitor;

	char* resource_path;
	int resource_dfd;

	char* appl_server_path; /* hosting server-side appl controller */
	int appl_server_dfd;

	char* appl_server_datapath; /* set if the controller is allowed datastore */
	int appl_server_datadfd;

	char* appl_logpath;

 /* Set when permitting dynamic controller push, takes precendence over
	* appl-server-path unless instructed to rollback. */
	char* appl_server_temp_path;
	int appl_server_temp_dfd;

	int appl_logdfd;
};
/*
 * A config file for the modes is kindof needed at this point:
 *
 *   - where is the appltemp
 *   - delete on shutdown?
 *   - continuous reload / update
 *   - block saves
 *   - send reports
 *   - force fontpath
 *   - block afsrv(dec,enc,term,net)
 *   - custom afsrv set
 *   - synch db k/v as state (arcan_db show_appl ...)
 *
 * Which again ties into some need to be able to inject events into shmif
 */
struct directory_meta;
enum monitor_mode {
	MONITOR_NONE     = 0,
	MONITOR_SIMPLE   = 1,
	MONITOR_DEBUGGER = 2,
	MONITOR_ADMIN    = 3
};
struct anet_dircl_opts {
/* where are appls loaded from? */
	int basedir;
	char basedir_path[PATH_MAX];

/* filled if an appl is requested */
	char* appl_runner;
	char applname[18];    /* identifier is max 18, but we user-code options
													 as characters, < for source, > for sink and |
													 prefix for tunnel only */
	uint16_t applid;

	bool die_on_list;
	bool reload;           /* reload / re-execute appl if changed on server */
	bool block_state;      /* don't try to save state */
	bool block_log;        /* stop appl_runner from logging */
	bool stderr_log;       /* forward appl_runner stderr */
	bool keep_appl;        /* don't unlink / erase appl after running */
	bool request_tunnel;   /* relay traffic through directory if necessary */
	int monitor_mode;

	char ident[16]; /* name to identify as (a-z0-9) */

/* callback handler for sinking a directory server registered source */
	void (*dir_source)(struct a12_state*, struct a12_dynreq req, void* tag);
	void *dir_source_tag;
	uint16_t source_port;

/* filled if an upload (store) operation is requested */
	struct appl_meta outapp;
	bool outapp_ctrl;

/* filled if an upload or download is requested */
	struct {
		char* name;
		char* path;
		char applname[16];
	} upload;

	struct {
		char* name;
		char* path;
		char applname[16];
	} download;

/* actions for [reserve space / unpack] -> [execute] */
	void* (*allocator)(struct a12_state*, struct directory_meta*);
	pid_t (*executor)(struct a12_state*,
		struct directory_meta*, const char*, void* tag, int* inf, int* outf);
};
/*
 * This struct regulates the connection and config between main, and worker.
 */
struct directory_meta {
	struct a12_state* S;
	struct anet_dircl_opts* clopt;

	char* secret;
	bool in_transfer;
	uint32_t transfer_id;

	FILE* appl_out;
	bool appl_out_complete;
	int state_in;
	bool state_in_complete;

/* for file transfers, the first BCHUNKSTATE event is stored here, waiting
 * for the corresponding bstream command */
	arcan_event breq_pending;

	struct arcan_shmif_cont* C;
};
/*
 * This is used to track each discrete client >both< in main and worker. They
 * don't need to be synched between the two, each side tracks the information
 * they need.
 */
struct dircl;
struct dircl {
	int in_appl; /* have they joined an appl- controller? */
	bool in_monitor;
	char identity[16]; /* msggroup identifier (no ctrl) */

	int type; /* source, sink or directory */

/* used to track request and pairing from a BCHUNKSTATE request for input and
 * the request to the parent to access the keystore */
	bool pending_stream;
	int pending_fd;
	uint16_t pending_id;

/* netstate event used to transfer keys, for the client and if there is a
 * tunnel request */
	arcan_event petname;
	arcan_event endpoint;

/* slot for callback handler registration in config.lua script */
	intptr_t lua_cb;

/* authentication public key and whether it is approved or not */
	uint8_t pubk[32];
	bool authenticated;
	bool in_admin;
	bool dir_link;
	int admin_fdout;

/* accumulation buffer so that we don't permit forwarding unterminated
 * MESSAGE chains to appl-controller */
	char message_multipart[1024];
	size_t message_ofs;
	void* userdata;

/* the parent end handle to the worker */
	struct shmifsrv_client* C;

/* stored as a linked list */
	struct dircl* next;
	struct dircl* prev;

/* [UAF-risk] 1:1 for now - always check this when removing a dircl */
	struct dircl* tunnel;
};
struct global_cfg {
	bool soft_auth;
	bool no_default;
	bool probe_only;
	bool keep_alive;
	bool discover_synch; /* update keystore ip with most recently seen */

	size_t accept_n_pk_unknown;
	size_t backpressure;
	size_t backpressure_soft;
	int directory;
	struct anet_dirsrv_opts dirsrv;
	struct anet_dircl_opts dircl;
	struct anet_options meta;

	bool use_forced_remote_pubk;
	uint8_t forced_remote_pubk[32];

	char* trust_domain;
	char* path_self;
	char* outbound_tag;
	char* config_file;
	char* db_file;
};
struct dirlua_event {
	int kind;
	const char* msg;
};
struct ioloop_shared;
struct ioloop_shared {
	int fdin;
	int fdout;
	int userfd;
	int userfd2;
	int wakeup;

	struct arcan_shmif_cont shmif;
	struct arcan_shmif_cont* handover;

	pthread_mutex_t lock;
	struct a12_state *S;
	volatile bool shutdown;
	struct directory_meta* cbt;

/* interface mandated by a12, hence shared passed in tag */
	void (*on_event)(
		struct arcan_shmif_cont* cont, int chid,
		struct arcan_event*, void*);

	bool (*on_directory)(struct ioloop_shared* S, struct appl_meta* dir);
	void (*on_userfd)(struct ioloop_shared* S, bool ok);
	void (*on_userfd2)(struct ioloop_shared* S, bool ok);
	void (*on_shmif)(struct ioloop_shared* S, bool ok);
	void* tag;
};
/*
 * Used by a directory worker to [synchronous, blocking, non-reentrant]
 * retrieve a descriptor from the parent for the specified resource in
 * for input or output.
 *
 * [pending] will be populated with dynamically allocated (and for
 * descrevents, dup:ed) events that were received while waiting for the
 * response as with dir_block_synch_request.
 *
 * It's the caller responsibility to process/free/close this.
 */
struct evqueue_entry;
struct evqueue_entry {
	struct arcan_event ev;
	struct evqueue_entry* next;
};