src/frameserver/util/anet_helper.h

struct anet_options {
/* remote connection point to route through (if permitted) */
	const char* cp;
	const char* host;
	const char* port;

/* keyfile to use when picking an outgoing host, this will override any
 * specified 'host' or 'port' unless ignore_key_host is set */
	const char* key;
	bool ignore_key_host;

/* tag from keystore to use for authentication (server reply) or if 'key' is
 * not set and [host,port]+[host_tag] is used - if host_tag is not set,
 * 'default' will be used */
	const char* host_tag;

/* petname used to register as a source/linked directory in another - this is a
 * hint, the server may well assign a different one */
	const char petname[16];

/* pre-inherited socket to use */
	int sockfd;

/* determine if we go multithread, multiprocess or single */
	int mt_mode;

/* client or server */
	int mode;

/* n- psk hello packets with unknown public keys will be added to the keystore */
	int allow_n_keys;

/* in the event of a _EXIT message, instead send the client to migrate */
	const char* redirect_exit;

/* similarly, remember any local connection point and use that */
	const char* devicehint_cp;

/* allow connection retries, -1 infinite, 0 no retry */
	ssize_t retry_count;

/* construction arguments for the keystore */
	struct keystore_provider keystore;
	struct a12_context_options* opts;
};
/* list all the known outbound tags, terminates with a NULL petname */
bool a12helper_keystore_tags(bool (*cb)(const char* petname, void*), void* tag);
/*
 * See if there is a trusted / known key that match H(chg | pubk) If so, return
 * true, real public key in outk and any matching tagged outbound as a dynamic
 * string in outtag. 'skip' ignores the first 'skip' number of matches for the
 * case where one beacon matches multiple entries.
 */
bool a12helper_keystore_known_accepted_challenge(
	const uint8_t pubk[static 32],
	const uint8_t chg[static 8],
	bool (*on_beacon)(
		struct arcan_shmif_cont*,
		const uint8_t[static 32],
		const uint8_t[static 8],
		const char*,
		char*
	),
	struct arcan_shmif_cont*, char*
);
/*
 * Using the configuration structure in anet_options, build a listening
 * socket and invoke dispatch with the heap allocated state object and
 * descriptor. This function will only return on failure, with [errmsg]
 * set to a heap allocated human readable string.
 */
bool anet_listen(struct anet_options* args, char** errmsg,
	void (*dispatch)(struct a12_state* S, int fd, void* tag), void* tag);