src/a12/net/a12_helper.h

struct anet_discover_opts;
/*
 * Register a new frame listener, [raw] is set of a client can't handle
 * the encoded form. This normally happens by first trying the passthrough
 * form (much cheaper our side), then _drop_listener and _add as [raw].
 */
void a12helper_vbuffer_add_listener(
	struct frame_cache*, uintptr_t ref,
		bool raw, void (*trigger)(uintptr_t ref, uint8_t* buf, size_t buf_sz, int type));
/*
 * Setup a listening endpoint, and signal whenver there is data on the (optional)
 * shmif context or when there is a beacon that triggered something known.
 */
void
	a12helper_listen_beacon(
		struct arcan_shmif_cont* C,
		struct anet_discover_opts* O,

/*
 * We have a beacon match in whatever domain [socket], matching to a previous
 * key in 'accepted' - if the beacon is valid but unknown, 'tag' will be set
 * to NULL, otherwise tag might be set to empty (accepted but untagged) or the
 * actual keystore tagname. Addr is the resolved gethostname() result.
 *
 * The [nonce] is time sensitive, if it's to be used to initiate a connection
 * to host and used to tag the initial packet, it should be done so
 * immediately.
 *
 * There can be several on_beacon calls for one-beacon if there are multiple
 * matches in the set of identities tied to one beacon. Note that these can be
 * spoofed to provoke a result, i.e. by collecting Kpubs through some other
 * means and then sending them out in an active scan yourself.
 *
 * Return false to stop processing further beacons.
 */
		bool (*on_beacon)(
			struct arcan_shmif_cont* C,
			const uint8_t kpub[static 32],
			const uint8_t nonce[static 8],
			const char* tag,
			char* addr),
		void (*on_unknown)(char* addr),
		bool (*on_shmif)(struct arcan_shmif_cont* C)

/*
 * This indicates that there is someone sending a beacon, but we have no idea
 * who that is. It may be useful to log this in some cases and try to connect
 * to the beacon source directly, like when there is a allow-n-unknown with a
 * custom passphrase.
 */
	);
/*
 * Helpers for setting up listen_beacon and build_beacon
 */
struct anet_discover_opts {
	int limit; /* -1 infinite, 0 = once, > count down after each */
	int timesleep; /* seconds between beacon passes */
	const char* ipv6; /* set to bind to IPv6 multicast address */

	bool (*discover_beacon)(
		struct arcan_shmif_cont*,
		const uint8_t kpub[static 32],
		const uint8_t nonce[static 8],
		const char* tag, char* addr
	);

	void (*discover_unknown)(char* addr);

	struct ipcfg* IP; /* build with a12helper_discover_ipcfg(cfg) */
	bool (*on_shmif)(struct arcan_shmif_cont* C);
	struct arcan_shmif_cont* C;
};