src/a12/net/anet_types.zig


    appl_runner: ?[*:0]u8 = null,
    appl_override: ?[*:0]u8 = null,
    applname: [18]u8 = std.mem.zeroes([18]u8),
    applid: u16 = 0,

    die_on_list: bool = false,
    reload: bool = false,
    block_state: bool = false,
    dump_state: ?[*:0]u8 = null,
    block_log: bool = false,
    stderr_log: bool = false,
    keep_appl: bool = false,
    request_tunnel: bool = false,
    applhost: bool = false,
    reconnect: bool = false,
    monitor_mode: c_int = 0,

    ident: [16]u8 = std.mem.zeroes([16]u8),
    sign_tag: ?[*:0]const u8 = null,

    // void(*)(struct a12_state*, struct a12_dynreq, void*)
    dir_source: ?*const fn (
        *struct_a12_state,
        struct_a12_dynreq,
        ?*anyopaque,
    ) callconv(.c) void = null,
    dir_source_tag: ?*anyopaque = null,
    source_port: u16 = 0,

    outapp: struct_appl_meta = .{},
    outapp_install: bool = false,
    outapp_ctrl: bool = false,
    build_appl: ?[*:0]u8 = null,
    build_appl_dfd: c_int = 0,

    upload: struct_dircl_nameent = .{},
    download: struct_dircl_nameent = .{},

    // void*(*)(struct a12_state*, struct directory_meta*, const char*)
    allocator: ?*const fn (
        ?*struct_a12_state,
        ?*struct_directory_meta,
        ?[*:0]const u8,
    ) callconv(.c) ?*anyopaque = null,
    // pid_t(*)(struct a12_state*, struct directory_meta*,
    //   const char*, void* tag, int* inf, int* outf)
    executor: ?*const fn (
        ?*struct_a12_state,
        ?*struct_directory_meta,
        ?[*:0]const u8,
        ?*anyopaque,
        ?*c_int,
        ?*c_int,
    ) callconv(.c) pid_t = null,
};
pub const anet_dircl_opts = struct_anet_dircl_opts;

// directory_meta — shared per-connection state between worker and directory.
pub const struct_directory_meta = extern struct {
    S: ?*struct_a12_state = null,
    // [*c] pointer so callers can dereference via .* / .*.field matching
    // the legacy @cImport-derived C-pointer semantics used throughout
    // dir_cl.zig and dir_srv_worker.zig.
    clopt: [*c]struct_anet_dircl_opts = null,
    secret: ?[*:0]u8 = null,
    in_transfer: bool = false,
    transfer_id: u32 = 0,
    appl_out: ?*FILE = null,
    appl_out_complete: bool = false,
    appl_hash: [4]u8 = std.mem.zeroes([4]u8),
    state_in: c_int = -1,
    state_in_complete: bool = false,
    breq_pending: struct_arcan_event = .{ .pad = @splat(0) },
    tag: ?*anyopaque = null,
    C: ?*struct_arcan_shmif_cont = null,
};
pub const directory_meta = struct_directory_meta;

// dircl — per-client tracking struct.
pub const struct_dircl = extern struct {
    in_appl: c_int = 0,
    in_monitor: bool = false,
    identity: [16]u8 = std.mem.zeroes([16]u8),
    type: c_int = 0,

    pending_stream: bool = false,
    pending_fd: c_int = 0,
    pending_id: u16 = 0,

    // netstate event used to transfer keys (matches C struct dircl fields).
    petname: struct_arcan_event = .{ .pad = @splat(0) },
    endpoint: struct_arcan_event = .{ .pad = @splat(0) },

    lua_cb: isize = 0,

    pubk: [32]u8 = std.mem.zeroes([32]u8),
    authenticated: bool = false,
    in_admin: bool = false,

    dir_link: bool = false,
    dir_ref: bool = false,
    dir_resolver: bool = false,

    admin_fdout: c_int = 0,

    pubk_sign: [SIG_PUBK_SZ]u8 = std.mem.zeroes([SIG_PUBK_SZ]u8),

    message_multipart: [1024]u8 = std.mem.zeroes([1024]u8),
    message_ofs: usize = 0,
    userdata: ?*anyopaque = null,

    C: ?*struct_shmifsrv_client = null,

    ref_id: usize = 0,

    next: ?*struct_dircl = null,
    prev: ?*struct_dircl = null,
    tunnel: ?*struct_dircl = null,
};
pub const dircl = struct_dircl;

// global_cfg — top-level loaded from config.lua.
pub const struct_global_cfg = extern struct {
    soft_auth: bool = false,
    no_default: bool = false,
    probe_only: bool = false,
    keep_alive: bool = false,
    cast: bool = false,
    discover_synch: bool = false,

    accept_n_pk_unknown: usize = 0,
    backpressure: usize = 0,
    backpressure_soft: usize = 0,
    directory: c_int = 0,
    dirsrv: struct_anet_dirsrv_opts = .{},
    dircl: struct_anet_dircl_opts = .{},
    meta: struct_anet_options = .{},

    use_forced_remote_pubk: bool = false,
    forced_remote_pubk: [32]u8 = std.mem.zeroes([32]u8),

    trust_domain: ?[*:0]u8 = null,
    path_self: ?[*:0]u8 = null,
    outbound_tag: ?[*:0]u8 = null,
    config_file: ?[*:0]u8 = null,
    db_file: ?[*:0]u8 = null,
};
pub const global_cfg = struct_global_cfg;

// dirlua_event.
pub const struct_dirlua_event = extern struct {
    kind: c_int = 0,
    msg: ?[*:0]const u8 = null,
};
pub const dirlua_event = struct_dirlua_event;

// dirlua_monitor_state — matches `struct dirlua_monitor_state` in
// dir_lua_support.h. Members are read/written directly by
// dir_lua_support.zig so the layout must stay in lockstep.
pub const BREAK_LIMIT: usize = 8;
pub const struct_dirlua_monitor_state_breakpoint = extern struct {
    bpt: extern struct {
        line: usize = 0,
        file: ?[*:0]u8 = null,
    } = .{},
    type: c_int = 0,
};
pub const struct_dirlua_monitor_state = extern struct {
    breakpoints: [BREAK_LIMIT]struct_dirlua_monitor_state_breakpoint =
        [_]struct_dirlua_monitor_state_breakpoint{.{}} ** BREAK_LIMIT,
    n_breakpoints: usize = 0,
    in_breakpoint_set: bool = false,
    hook_mask: c_int = 0,
    lock: bool = false,
    stepreq: bool = false,
    dumppause: bool = false,
    @"error": bool = false,
    transaction: bool = false,

    out_buf: ?[*:0]u8 = null,
    out_sz: usize = 0,
    out: ?*FILE = null,
    C: ?*struct_arcan_shmif_cont = null,
};
pub const dirlua_monitor_state = struct_dirlua_monitor_state;

// evqueue_entry — dynamic list of events received while waiting for a bchunk reply.
pub const struct_evqueue_entry = extern struct {
    ev: struct_arcan_event = .{ .pad = @splat(0) },
    next: ?*struct_evqueue_entry = null,
};
pub const evqueue_entry = struct_evqueue_entry;

// ioloop_shared — main event loop driver struct.
pub const struct_ioloop_shared = extern struct {
    fdin: c_int = 0,
    fdout: c_int = 0,
    userfd: c_int = 0,
    userfd2: c_int = 0,
    wakeup: c_int = 0,

    shmif: struct_arcan_shmif_cont = .{},
    handover: ?*struct_arcan_shmif_cont = null,

    lock: pthread_mutex_t = .{},
    S: ?*struct_a12_state = null,
    shutdown: bool = false,
    cbt: ?*struct_directory_meta = null,

    on_event: ?*const anyopaque = null,
    on_directory: ?IoloopDirectoryCb = null,
    on_userfd: ?IoloopFdCb = null,
    on_userfd2: ?IoloopFdCb = null,
    on_shmif: ?IoloopFdCb = null,
    on_disconnected: ?IoloopDisconnectCb = null,
    tag: ?*anyopaque = null,
};
pub const ioloop_shared = struct_ioloop_shared;

/// Callback type for struct_ioloop_shared.on_userfd / on_shmif / on_userfd2.
/// Signature mirrors dir_supp.c: `void (*)(struct ioloop_shared*, bool ok)`.
pub const IoloopFdCb = *const fn (I: *struct_ioloop_shared, ok: bool) callconv(.c) void;
/// Callback type for struct_ioloop_shared.on_directory.
/// Signature: `bool (*)(struct ioloop_shared*, struct appl_meta*)`.
pub const IoloopDirectoryCb = *const fn (I: *struct_ioloop_shared, dir: *struct_appl_meta) callconv(.c) bool;
/// Callback type for struct_ioloop_shared.on_disconnected.
/// Signature: `bool (*)(struct ioloop_shared*)` — returns true to retry connect.
pub const IoloopDisconnectCb = *const fn (I: *struct_ioloop_shared) callconv(.c) bool;
